# infinidex_mcp

./: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
examples/: cursor_config.json
src/infinidex_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/infinidex_mcp/tools/: __init__.py  _base.py  fusion.py  items.py  locations.py  moves.py  pokemon.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_server.py  test_tools_fusion.py  test_tools_locations.py  test_tools_moves_items.py  test_tools_pokemon.py
