[project]
name = "infinidex-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing InfiniDex (Pokémon Infinite Fusion) data as structured tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "benjsant" }]
keywords = ["mcp", "model-context-protocol", "infinidex", "pokemon", "llm", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
infinidex-mcp = "infinidex_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/benjsant/InfiniDex"
Repository = "https://github.com/benjsant/infinidex-mcp"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infinidex_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=infinidex_mcp --cov-report=term-missing"

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "raise NotImplementedError"]
